sagitta-integration-tests/tests/snapshots/test__9-2.snap
---
source: sagitta-integration-tests/tests/test.rs
expression: sync_res_2
---
Ok(
    Ok {
        upsert_files: [],
        delete_files: [
            [
                "hello.txt",
            ],
        ],
    },
)
