sagitta-integration-tests/tests/snapshots/test__9-3.snap
---
source: sagitta-integration-tests/tests/test.rs
expression: out1
---
Output {
    status: ExitStatus(
        unix_wait_status(
            0,
        ),
    ),
    stdout: "total 0\n",
    stderr: "",
}
