sagitta-integration-tests/tests/snapshots/test__9-4.snap
---
source: sagitta-integration-tests/tests/test.rs
expression: sync_res_3
---
Ok(
    Ok {
        upsert_files: [
            [
                "foo",
                "hello.txt",
            ],
        ],
        delete_files: [],
    },
)
