sagitta-integration-tests/tests/snapshots/test__9-5.snap
---
source: sagitta-integration-tests/tests/test.rs
expression: sync_res_4
---
Ok(
    Ok {
        upsert_files: [],
        delete_files: [
            [
                "foo",
                "hello.txt",
            ],
            [
                "foo",
            ],
        ],
    },
)
