sagitta-integration-tests/tests/snapshots/test__9-6.snap
---
source: sagitta-integration-tests/tests/test.rs
expression: out2
---
Output {
    status: ExitStatus(
        unix_wait_status(
            0,
        ),
    ),
    stdout: "total 0\n",
    stderr: "",
}
