sagitta-integration-tests/tests/snapshots/test__9.snap
---
source: sagitta-integration-tests/tests/test.rs
expression: sync_res_1
---
Ok(
    Ok {
        upsert_files: [
            [
                "hello.txt",
            ],
        ],
        delete_files: [],
    },
)
